--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
             <ul class="sub-menu" id="sub-m"> 
                 <li>PEI CGS</li>
                 <li>¿Quienes Somos?</li>
-                <li>Aliados</li>
+                <li id="sub-sub-menu">Aliados</li>
+                <ul class="sub-sub-menu" id="sub-sub-m">
+                    <li>Ashoka</li>
+                    <li>Fundación Escuela Nueva</li>
+                </ul>
                 <li>Trabajamos Juntos</li>
             </ul>
             <li>Manual de Convivencia</li>
